# Distributed-Argon

./: Distributed-Argon.cabal  README.md  RESTful-Argon.cabal  RESTful-Cloud-API.cabal  compile.sh  docker-compose.yml  run.sh  stack.yaml  workers.sh
.stack-work/install/x86_64-osx/ghc-7.10.2/7.10.2/flag-cache/: data-accessor-0.2.2.7-7b1a2ee6f7375a477c68be3a7315aa0e  distributed-process-0.7.3-570a97f3c84964b3c87ccb51b4ca6258  distributed-process-simplelocalnet-0.2.4-9ee6847a542ebb4d6d1522dc9345ca37  distributed-static-0.3.8-92041f56603489410942e21a93699175  exceptions-0.8.3-e2fc8db84df6fe81a60a2a437818cf1d  filepath-1.4.1.2-91f2499f9c50ce73c4204835d58f94d2  hashable-1.2.6.1-3e8c21835d09af2af27f870be0dd20e8  mtl-2.2.1-1d0ca4a79590838bb61c8040a31234bf  network-2.6.3.2-ea0b9256b14bb040f120aae57d694e27  network-multicast-0.2.0-c05623d3359b399ca75d3bd258410a14  network-transport-0.5.2-72c083527c2297f27669a485459479d3  network-transport-tcp-0.6.0-9af5ed804e37e70cb4818fdd4f6b26c4  random-1.1-1229fa9ea3f9951a38fad637630a5acf  rank1dynamic-0.4.0-543eeef7e8ad2b89276cd8b43d27f9ef  stm-2.4.4.1-e849555e5d7853a5ea8c87ff8410346b  syb-0.7-ebbfdcb42e8cbb233ab801829c60daf7  text-1.2.2.2-ae6b3a5ddd6ae4cb1be09a91986b825b  transformers-0.5.5.0-af2f7c3005532e990156826b49b4a7d6  transformers-compat-0.5.1.4-4ea696e199ed0ce343fdcb5c49ce902c
.stack-work/install/x86_64-osx/ghc-7.10.2/7.10.2/pkgdb/: data-accessor-0.2.2.7-7b1a2ee6f7375a477c68be3a7315aa0e.conf  distributed-process-0.7.3-570a97f3c84964b3c87ccb51b4ca6258.conf  distributed-process-simplelocalnet-0.2.4-9ee6847a542ebb4d6d1522dc9345ca37.conf  distributed-static-0.3.8-92041f56603489410942e21a93699175.conf  exceptions-0.8.3-e2fc8db84df6fe81a60a2a437818cf1d.conf  filepath-1.4.1.2-91f2499f9c50ce73c4204835d58f94d2.conf  hashable-1.2.6.1-3e8c21835d09af2af27f870be0dd20e8.conf  mtl-2.2.1-1d0ca4a79590838bb61c8040a31234bf.conf  network-2.6.3.2-ea0b9256b14bb040f120aae57d694e27.conf  package.cache  (+10 more)
app/: Main.hs
src/: .Lib.hs.swp  Config.hs  Database.hs  Lib.hs  Models.hs  Utils.hs
(+513 files in other folders)
