name:                Distributed-Argon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/McGizzle/Distributed-Argon#readme
license:             BSD3
license-file:        LICENSE
author:              Author Sean McGroarty
maintainer:          mcgroas@tcd.ie
copyright:           2017 Author Sean McGroarty
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Utils
  build-depends:       base >= 4.7 && < 5
                     , distributed-process 
                     , distributed-process-simplelocalnet 
                     , network-transport-tcp
                     , filepath, mtl
                     , process
                     , directory
                     , argon
                     , pipes
                     , pipes-safe
  default-language:    Haskell2010

executable Distributed-Argon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Distributed-Argon
                     , distributed-process 
                     , distributed-process-simplelocalnet 
                     , network-transport-tcp
                     , filepath, mtl
                     , process
                     , directory
                     , argon
                     , pipes
                     , pipes-safe
  default-language:    Haskell2010

test-suite Distributed-Argon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Distributed-Argon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Distributed-Argon
